added changes after the mentor's review